# Employee-management-system

./: .gitignore  Cargo.toml  EXAMPLE_IMPLEMENTATIONS.md  README.md  flake.nix
http/: auth.http  health.http
src/: config.rs  error.rs  main.rs  routers.rs  utils.rs
src/middlewares/: authorization.rs
src/modals/: employee.rs
src/routers/: auth.rs  auth_schema.rs  check_health.rs  employee.rs
src/utils/: api_doc.rs  jwt.rs
static/: index.html
tests/: integration_test.rs
