[package]
name = "leave-management"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
axum-valid = "0.18.0"
chrono = "0.4.38"
clap = { version = "4.5.7", features = ["derive", "env"] }
dotenv = { version = "0.15.0", features = ["clap"] }
jsonwebtoken = "9.3.0"
password-auth = "1.0.0"
serde = { version = "1.0.203", features = ["derive"] } 
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = ["sqlite", "chrono", "runtime-tokio"] } 
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread"] }
tower-cookies = "0.10.0"
tower-http = { version = "0.5.2", features = ["fs", "cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
utoipa = { version = "4.2.3", features = ["axum_extras", "chrono"] }
utoipa-scalar = { version = "0.1.0", features = ["axum"] }
utoipauto = "0.1.12"
validator = { version = "0.18.1", features = ["derive"] }

[dev-dependencies]
axum-test = "15.2.0"

